# codesnippets

C++/: Gamma.cxx  complex.cxx  double2string.cxx  doubleComparison.cxx  integrate.cxx  map.cxx  matrixAsArgument.cxx  passByRef.cxx  randomGaussian.cxx  replaceSubStr.cxx  stackPointer.cxx  stringSplit.cxx  switchCase.cxx  tablePrinter.cxx  transpose.cxx  vecInFunc.cxx  voidInvalidUse.cxx  whilesstream.cxx
C++/binaryIO/: binaryIO.cxx
C++/call_ext_program/: aux.cxx  main.cxx  output.txt
C++/cpp_project_template/: exe  main.cxx  makefile
C++/fileIO/: IOtest.cxx
C++/multithreading/: pthread.cxx  stdthread.cxx
C++/numerical_integration/: numInt.cxx  numIntMultiPar.cxx
C++/pathExistence/: path.cxx
LaTeX/FeynmanGraphs/: FeynmanGraphs.tex  README.txt  make.sh
LaTeX/Japanese/: nihongo.tex
ROOT/alphasRun/: alphasRun.C  alphasRun_nfl.C  simpleApprox.C
ROOT/histoManipulations/: histoAvg.C
ROOT/multithreading/: implicitMulti.C  links  multiThread.C  pthreadtest.C  pthreadtest2.C  testMulti.C  (+1 more)
cmake/cpp_fortran/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  interface.cxx  prog.f  testEXE
cmake/fortran/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  greet  hello.f90
cmake/helloworld/: CMakeLists.txt  hello.cxx
python/: Dirac_delta.py  MSR_decoupling.py  NDinterpolate.py  arrayDimDel.py  array_gradient.py  arrays.py  backupScript.py  complex.py  divideArrayInBlocks.py  factorInLogDependence.py  functions.py  genDuplicates.py  histoInt.py  interpolateCrossing.py  jupyterlab_pool.ipynb  listCopy.py  loop.py  magneticField.py  map.py  memory.py  multifit.py  multiprocessing_pool.py  multiprocessing_starmap.py  multithreading.py  multithreading_retVal.py  numpylinalg.py  parallelized.py  recurse.py  singularMatrix.py  terminal_commands_within_code.py  tryExcept.py  userInput.py  vecAgree.py  vecSplit.py  wgthisto.py
shell/: fileExistsInSubdirs.sh  glibcVerCheck.sh
(+100 files in other folders)
